Encapsulate props